[tool.poetry]
name = "rp2md"
version = "0.1.0"
description = ""
authors = ["Dima Evan <dimaevan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
lxml = "^4.9.1"
bs4 = "^0.0.1"
requests = "^2.28.1"



[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
